# dicoco

./: .gitignore  README.md  pyproject.toml
dicoco-web/: App.js  package-lock.json  package.json
dicoco-web-v2/: package.json
dicoco-web-v2/public/: index.html
dicoco-web-v2/src/components/: AlphabeticFilter.js  AnagramFilter.js  ExplicationIndex.js  FilterDisplay.js  PhoneticFilter.js  TabsHeader.js
dicoco-web-v2/src/pages/: AnagramMaster.js  Index.js  test.css
dicoco-web-v2/src/scss/source/: dicoco.scss  explicationIndex.scss
dicoco-web-v2/src/utils/: utils.js
dicoco-web/public/: index.html  manifest.json
dicoco-web/src/: App.js  dicoco.css  index.js  test.css
dicoco-web/src/components/: AlphabeticFilter.js  AnagramFilter.js  ExplicationAnagramMaster.js  ExplicationIndex.js  FilterDisplay.js  OtherFilter.js  PhoneticFilter.js  TabsHeader.js
dicoco-web/src/pages/: AnagramMaster.js  Index.js  NoPage.js
dicoco-web/src/scss/source/: dicoco.scss  index.scss  tooltip.scss
dicoco-web/src/utils/: utils.js
dicocoApi/: app.py  package-lock.json  pyproject.toml  requirements.txt  tools.py  tools2.PY
dicocoApi/static/: swagger.json
dicocoApiV2/: .env.example  README.md  pyproject.toml  requirements.txt
dicocoApiV2/app/: __init__.py  commands.py  config.py  models.py  routes.py  utils.py
dicocoApiV2/migrations/versions/: 5d3dfe0fbadd_first_migration.py  6fd69e9b02dd_first_migration.py
