[tool.poetry]
name = "dicocoapiv2"
version = "0.1.0"
description = ""
authors = ["cjezierski <corentin.jezierski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
flask-cors = "^5.0.0"
flask-sqlalchemy = "^3.1.1"
pandas = "^2.2.2"
python-dotenv = "^1.0.1"
flask-migrate = "^4.0.7"
mysql-connector-python = "^9.0.0"
flask-mysql = "^1.5.2"
unidecode = "^1.3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
